# fitbit-health-mcp

./: .gitignore  .tmp_remote_mcp_verify.py  LICENSE  README.md  README_CN.md  package-lock.json  pyproject.toml  render.yaml
docs/: CODEX_HANDOFF.md  LOCAL_HTTP_MCP_TEST.md  REMOTE_DEPLOYMENT_PLAN.md  REMOTE_MCP_DESIGN.md
docs/superpowers/plans/: 2026-07-18-fitbit-health-fetch-window.md  2026-07-18-fitbit-health-mcp-implementation.md  2026-07-18-fitbit-health-pipeline.md  2026-07-20-fitbit-health-web-oauth-bootstrap.md
docs/superpowers/specs/: 2026-07-18-fitbit-health-fetch-window-design.md  2026-07-18-fitbit-health-mcp-design.md  2026-07-18-fitbit-health-pipeline-design.md  2026-07-20-fitbit-health-web-oauth-bootstrap-design.md
src/fitbit_health/: __init__.py  __main__.py  analytics.py  auth.py  auth_boundary.py  client.py  config.py  credential_storage.py  fetch_window.py  http_mcp_server.py  mcp_oauth.py  mcp_resource_auth.py  mcp_server.py  mcp_token_store.py  mcp_tools.py  normalize.py  pipeline.py  report.py  web_oauth.py
tests/: fixture_mcp_server.py  test_analytics.py  test_auth.py  test_cli.py  test_client.py  test_config.py  test_credential_storage.py  test_http_mcp_server.py  test_mcp_oauth.py  test_mcp_resource_auth.py  test_mcp_server.py  test_mcp_stdio.py  test_mcp_token_store.py  test_mcp_tools.py  test_normalize.py  test_pipeline.py  test_render_config.py  test_report.py  test_web_oauth.py
